{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 8,
  "lineage": "f0aadc1c-ba3a-0fd5-a7c6-7dc7c103f568",
  "resources": [
    {
      "module": "module.app2_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "module.app2_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265915233350:internet-gateway/igw-056012aa0a2132ffd",
            "id": "igw-056012aa0a2132ffd",
            "owner_id": "265915233350",
            "tags": {
              "Name": "app2-igw"
            },
            "tags_all": {
              "Name": "app2-igw"
            },
            "vpc_id": "vpc-03e8bfd01cdbbb5f0"
          },
          "dependencies": [
            "module.app2_vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app2_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myroute",
      "provider": "module.app2_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265915233350:route-table/rtb-0ae5264598a9cd0f6",
            "id": "rtb-0ae5264598a9cd0f6",
            "owner_id": "265915233350",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056012aa0a2132ffd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app2-route"
            },
            "tags_all": {
              "Name": "app2-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e8bfd01cdbbb5f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app2_vpc.aws_internet_gateway.myigw",
            "module.app2_vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app2_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myrouteassoc",
      "provider": "module.app2_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef26f9d3b5443f1b",
            "route_table_id": "rtb-0ae5264598a9cd0f6",
            "subnet_id": "subnet-03f716a3302a9c1ca"
          },
          "dependencies": [
            "module.app2_vpc.aws_internet_gateway.myigw",
            "module.app2_vpc.aws_route_table.myroute",
            "module.app2_vpc.aws_subnet.mysubnet",
            "module.app2_vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app2_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg",
      "provider": "module.app2_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265915233350:security-group/sg-002af03b334d72d8c",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002af03b334d72d8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "app2-sg",
            "name_prefix": "",
            "owner_id": "265915233350",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app2-sg"
            },
            "tags_all": {
              "Name": "app2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e8bfd01cdbbb5f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app2_vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app2_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysubnet",
      "provider": "module.app2_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265915233350:subnet/subnet-03f716a3302a9c1ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f716a3302a9c1ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "265915233350",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app2-subnet"
            },
            "tags_all": {
              "Name": "app2-subnet"
            },
            "vpc_id": "vpc-03e8bfd01cdbbb5f0"
          },
          "dependencies": [
            "module.app2_vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app2_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "module.app2_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265915233350:vpc/vpc-03e8bfd01cdbbb5f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0c06815dbdb6c5493",
            "default_route_table_id": "rtb-0cde9233c3a1c21f0",
            "default_security_group_id": "sg-0fb25799f2cad8468",
            "dhcp_options_id": "dopt-04590a6010ca641a1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e8bfd01cdbbb5f0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cde9233c3a1c21f0",
            "owner_id": "265915233350",
            "tags": {
              "Name": "app2-vpc"
            },
            "tags_all": {
              "Name": "app2-vpc"
            }
          }
        }
      ]
    }
  ]
}